kubernetes-demo/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hello-world
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: node-hello-world
  type: ClusterIP
